Added working service

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" type="text/css" href="https://semantic-ui.com/dist/semantic.min.css">
+  <script src="https://semantic-ui.com/examples/assets/library/jquery.min.js"></script>
+  <script src="https://semantic-ui.com/dist/semantic.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
